--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
-    "@prisma/client": "^6.19.2"
+    "@prisma/client": "^6.19.2",
+    "dotenv": "^17.2.3"
   }
 }
